--- a/main.ipynb
+++ b/main.ipynb
@@ -728,11 +728,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "j = Image.fromarray(final)\n",
+    "j.save(\"good bird.png\")"
    ]
   },
   {
